corrected label on index page

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -11,7 +11,7 @@
 <br>
 
 <form action = "addMovieServlet" method="post">
-Store: <input type ="text" name = "title">
+Title: <input type ="text" name = "title">
 <br>
 <br>
 Item: <input type = "text" name = "quantity">
